<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".profile.about_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/pbold"
                android:text="About"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="20dp"
                            android:src="@drawable/logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/pmedium"
                            android:gravity="center"
                            android:text="@string/screen1desc"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="20dp"
                            android:src="@drawable/qr_code" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/pmedium"
                            android:gravity="center"
                            android:text="@string/screen2desc"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/hocci" />

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/unhabitat" />

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/japan" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/cdo" />

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/clenro_logo" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/pmedium"
                            android:gravity="center"
                            android:text="@string/screen3desc"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/pmedium"
                            android:gravity="center"
                            android:text="@string/screen4desc"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/autodidactics" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/pmedium"
                            android:gravity="center"
                            android:text="@string/screen5desc"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/pmedium"
                    android:text="Version 1.0.1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>